--- a/Roadmap/Week-1/Day 3/Task/day3new.css
+++ b/Roadmap/Week-1/Day 3/Task/day3new.css
@@ -6,7 +6,7 @@ body{
     display: grid;
     grid-template-areas: 
     "nav nav nav"
-    "sidebar main noti"
+    "sidebar main notification"
     "footer footer footer";
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: auto 1fr auto ;
@@ -41,7 +41,7 @@ main{
     flex-direction: row;
 }
 .notifications{
-    grid-area: noti;
+    grid-area: notification;
     background-color: rgb(255, 255, 202);
 }
 .boxes{
@@ -71,7 +71,7 @@ footer{
         grid-template-areas: 
         "nav"
         "sidebar"
-        "noti"
+        "notification"
         "main"
         "footer";
         grid-template-columns: 1fr;
