--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
@@ -5,6 +5,9 @@
     font-family:  "Lexend";
     text-align: justify;
 }
+html {
+  scroll-behavior: smooth;
+}
 body{
     background-color: #212121;
     color: white;
