--- a/Roadmap/Week-1/Day-1/day1.css
+++ b/Roadmap/Week-1/Day-1/day1.css
@@ -12,7 +12,6 @@ body{
     flex-direction: row;
     align-items: center;
     justify-content: space-between ;
-    /* padding-right: 50px; */
 }
 .nav-title{
     display: flex;
@@ -59,6 +58,7 @@ body{
 }
 .contact-form h2{
     font-size: 1.7rem;
+    text-align: center;
 }
 .contact-form form{
     display: flex;
@@ -85,8 +85,8 @@ body{
     border: none;
     font-size: 1.1rem;
     padding: 5px 15px;
+    text-align: center;
 }
-
 .tables{
     display: flex;
     flex-direction: row;
@@ -97,6 +97,7 @@ table, th, td{
     border-collapse: collapse;
     padding: 5px;
 }
+/* Added Interactiveness */
 tr:hover{
     background-color: gainsboro;
 }
@@ -165,7 +166,7 @@ tr:hover{
     grid-template-columns: 33% 33% 33% ;
 }
 .grid-1 div{
-    background-color: rgb(250, 8, 8);
+    background-color: #fa0808;
     
 }
 .grid div{
@@ -175,7 +176,7 @@ tr:hover{
     border-radius: 10px;
 }
 .grid-2 div{
-    background-color: rgb(117, 232, 34);
+    background-color: #75e822;
 }
 .grid-2{
     grid-template-columns: 50px 100px minmax(100px, auto);
@@ -217,6 +218,9 @@ tr:hover{
     }
     .nav-list-item a{
         width: 100%;
+    }
+    .tables{
+        flex-wrap: wrap;
     }
 }
 
