--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family:  "Lexend";
-    text-align: justify;
+    /* text-align: justify; */
 }
 html {
   scroll-behavior: smooth;
@@ -58,6 +58,8 @@ nav .list a:hover, nav .list p:hover{
     gap: 20px;
     justify-content: space-between;
     width: 88%;
+    /* background-color: #808080;
+    backdrop-filter: blur(20px); */
 }
 .text-intro{
     display: flex;
@@ -98,11 +100,16 @@ nav .list a:hover, nav .list p:hover{
     color: whitesmoke;
 }
 .about{
+    width: 90%;
+    margin: auto;
+    border-radius: 20px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     padding-top: 30px;
     padding-bottom: 30px;
-    background:linear-gradient(135deg, #00ffff, #4169e1);
+    background:linear-gradient(135deg, #00ffffe4, #4169e1de);
+    backdrop-filter: blur(50px);
 }
 .about h2{
     color: #212121;
@@ -120,7 +127,7 @@ nav .list a:hover, nav .list p:hover{
 .about .para{
     width: 45%;
     padding:2% 5%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #212121;
 }
 .skill-grid{
@@ -132,6 +139,7 @@ nav .list a:hover, nav .list p:hover{
     justify-content: space-between;
     /* margin: auto; */
     padding: 2%;
+    color: black;
 }
 .skill-grid h3{
     color: #212121;
@@ -240,6 +248,37 @@ nav .list a:hover, nav .list p:hover{
     padding: 5px 0px;
     font-size: 0.8rem;
 }
+.event-gallery{
+    height: 90vh;
+    width: 90%; 
+    margin: 60px auto;
+    display: flex;
+    align-items:baseline;
+}
+.event-gallery h2{
+    font-size: 3rem;
+}
+.event-gallery p{
+    font-weight: 200;
+    font-size: 0.8rem;
+}
+.event-gallery .frame{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    
+}
+.event-gallery img{
+    height: 220px;  
+    object-fit: contain;
+    background-color: #212121;
+    opacity: 0.5; 
+    display: inline;
+}
+.event-gallery img:hover, .event-gallery img:focus{
+    opacity: 1; 
+}
+
 .contact-form{
     color: #212121;
     border: 1px solid gray;
