--- a/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
+++ b/Roadmap/Week-1/Day-1/New Day 1/portfolio.css
@@ -257,25 +257,8 @@ nav .list a:hover, nav .list p:hover{
     margin: 60px auto;
     display: flex;
     align-items:baseline;
-/* 
-    position: relative;
-    padding: 120px 20px;
-    overflow: hidden; */
 }
 
-/* .event-gallery::before{
-  content: "";
-  position: absolute;
-  left: -10%;
-  top: -120px;
-  width: 120%;
-  height: 260px;                 
-  background: rgba(0,217,255,0.12);
-  transform: skewY(-6deg);       
-  transform-origin: 0;
-  z-index: -1;
-  pointer-events: none;         
-} */
 .event-gallery h2{
     font-size: 3rem;
 }
@@ -286,8 +269,7 @@ nav .list a:hover, nav .list p:hover{
 .event-gallery .frame{
     width: 100%;
     height: 100%;
-    text-align: center;
-    
+    text-align: center; 
 }
 .event-gallery img{
     height: 220px;  
@@ -299,7 +281,6 @@ nav .list a:hover, nav .list p:hover{
 .event-gallery img:hover, .event-gallery img:focus{
     opacity: 1; 
 }
-
 .contact-form{
     color: #212121;
     border: 1px solid gray;
@@ -350,6 +331,10 @@ nav .list a:hover, nav .list p:hover{
     display: block;
     margin: 5px auto ; 
     text-align: center;
+    transition: transform 0.2s ease;
+}
+.contact-form button:hover{
+    transform: scale(1.2);
 }
 fieldset{
     border-radius: 25px;
